--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Top DownMaze Example</title>
+  <title>Top-Down Maze Example</title>
   <style>
     body {
       margin: 0;
